Disable PauseForPendingResizeOrRepaints in AutoResize

In RenderWidgetHostImpl::OnResizeOrRepaintACK, we post a task to
base::ThreadTaskRunnerHandle::Get().

During resize, in RenderWidgetHostImpl::PauseForPendingResizeOrRepaints,
we pump a nested run loop on ui::WindowResizeHelperMac::task_runner,
which will not run this message.

This ends up causing the message to be received at an unexpected or
delayed time. Avoid this by disallowing PauseForPendingResizeOrRepaints
for AutoResize.

In principle the task could be posted to the WindowResizeHelperMac task
runner, but it's hard to be certain that that would not introduce bugs.

Bug: 816421
Change-Id: Iaf8bdcc99e4b40d41e2a9590e4436d07c450d403
Reviewed-on: https://chromium-review.googlesource.com/940444
Reviewed-by: Robert Liao <robliao@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539701}
Former-commit-id: eb1fe5485b437a580ab205870b4d31640301595b